--- a/index.html
+++ b/index.html
@@ -19,13 +19,17 @@
           <p>
             Your browser doesn't support HTML5 video.
           </p>
-          
+          <track id="captions" label="English" kind="subtitles" srclang="en" src="video/captions.vtt" default>
+
 
         </video>
 
         <!-- timeline -->
         <div class="playhead">
           <div id="progress-background">
+            <div id="buffer-bar">
+
+            </div>
             <div id="progress-over">
 
             </div>
@@ -39,7 +43,11 @@
               <div id="play-pause"><img src="icons/play-icon.png" alt="play button" /></div>
               <div id="time">
                 <p id="current" class="timeTxt"></p>
+                <p id="slash" class="timeTxt">/</p>
                 <p id="total" class="timeTxt"></p>
+              </div>
+              <div id="speed">
+                1X
               </div>
           </div>
 
@@ -64,50 +72,8 @@
             </div>
         </div>
     </div>
-    <div id="subtitles">
-            <p>
-              Now that we've looked at the architecture of the internet, let's see how you might connect your personal devices to the internet inside your house. Well there are many ways to connect to the internet, and most often people connect wirelessly.
+    <div id="transcript">
 
-              Let's look at an example of how
-              you can connect to the internet.
-
-              If you live in a city or a town,
-              you probably have a coaxial cable for
-
-
-              cable Internet, or a phone line if you
-              have DSL, running to the outside of
-
-              your house, that connects you to
-              the Internet Service Provider, or ISP.
-
-              If you live far out in the country,
-              you'll more likely have
-
-              a dish outside your house, connecting
-              you wirelessly to your closest ISP, or
-
-
-              you might also use the telephone system.
-
-
-              Whether a wire comes straight from
-              the ISP hookup outside your house, or
-
-
-              it travels over radio
-              waves from your roof,
-
-
-              the first stop a wire will make once
-              inside your house, is at your modem.
-
-
-              A modem is what connects the internet
-              to your network at home.
-
-              A few common residential modems are DSL or
-            </p>
     </div>
     <script src='js/application.js' type="text/javascript"></script>
 </body>
