--- a/index.html
+++ b/index.html
@@ -12,62 +12,56 @@
 
 <body>
     <div id="video-container">
-      <h1>Interactive Video Player</h1>
+        <h1>Interactive Video Player</h1>
         <!-- Video -->
         <video id="video">
           <source src="video/video.mp4" type="video/mp4">
           <source src="video/video.ogg" type="video/ogg">
+          <track id="captions" label="English" kind="subtitles" srclang="en" src="video/captions.vtt" default>
           <p>
             Your browser doesn't support HTML5 video.
           </p>
-          <track id="captions" label="English" kind="subtitles" srclang="en" src="video/captions.vtt" default>
-
-
         </video>
 
         <!-- timeline -->
         <div class="playhead">
-          <div id="progress-background">
-            <div id="buffer-bar">
-
+            <div id="progress-background">
+                <div id="buffer-bar"></div>
+                <div id="progress-over"></div>
             </div>
-            <div id="progress-over">
-
-            </div>
-          </div>
 
         </div>
-<!-- Video Controls -->
+        <!-- Video Controls -->
         <div id="video-controls">
-          <div id="leftControls">
-            <!-- play/pause -->
-              <div id="play-pause"><img src="icons/play-icon.png" alt="play button" /></div>
-              <div id="time">
-                <p id="current" class="timeTxt"></p>
-                <p id="slash" class="timeTxt">/</p>
-                <p id="total" class="timeTxt"></p>
-              </div>
-              <div id="speed">1x</div>
-          </div>
+            <div id="leftControls">
+                <!-- play/pause -->
+                <div id="play-pause"><img src="icons/play-icon.png" alt="play button" /></div>
+                <div id="time">
+                    <p id="current" class="timeTxt"></p>
+                    <p id="slash" class="timeTxt">/</p>
+                    <p id="total" class="timeTxt"></p>
+                </div>
+                <div id="speed">1x</div>
+            </div>
 
             <!-- <input type="range" id="seek-bar" value="0"> -->
             <div id="rightControls">
 
-              <div id="cc"><img src="icons/cc-icon.png" alt="closed captions" /></div>
-              <div id="mute"><img src="icons/volume-on-icon.png" alt="mute button" />
+                <div id="cc"><img src="icons/cc-icon.png" alt="closed captions" /></div>
+                <div id="mute"><img src="icons/volume-on-icon.png" alt="mute button" />
 
-              </div>
-              <div id="volume">
-                <div id="volume-background" class="">
-                  <!-- <input type="range" id="volume-bar" min="0" max="1" step="0.1" value="1"> -->
-                  <div id="volume-over"></div>
                 </div>
-              </div>
+                <div id="volume">
+                    <div id="volume-background" class="">
+                        <!-- <input type="range" id="volume-bar" min="0" max="1" step="0.1" value="1"> -->
+                        <div id="volume-over"></div>
+                    </div>
+                </div>
 
-              <!-- volume -->
+                <!-- volume -->
 
-              <!-- full screen -->
-              <div id="full-screen"><img src="icons/fullscreen-icon.png" alt="fullscreen button" /></div>
+                <!-- full screen -->
+                <div id="full-screen"><img src="icons/fullscreen-icon.png" alt="fullscreen button" /></div>
             </div>
         </div>
     </div>
